# oidn-wgpu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
examples/: cpu_denoise.rs  wgpu_denoise.rs
src/: buffer.rs  device.rs  error.rs  filter.rs  lib.rs  sys.rs  tests.rs  wgpu_integration.rs
